--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_markdown: ^0.6.14
+  http: ^0.13.5
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
