--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  archive: ^3.1.2
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   flutter_markdown: ^0.6.14
