--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dartz: ^0.10.1
   flutter_markdown: ^0.6.14
   http: ^0.13.5
+  markdown: ^7.0.1
 
 dev_dependencies:
   flutter_test:
