--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -24,7 +24,9 @@ jobs:
         run: flutter pub get
 
       - name: Build
-        run: flutter build web
+        run: |
+          pwd
+          flutter build web
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
